TinyWall Changelog
---------------------

3.4.0 - not yet released
- Add Last Modified column to application exceptions list
- Performance enhancements for Connections, Processes and Settings windows
- Fix Connections windows might occasionally show empty list of active/listener sockets
- Fix blocked IPv6 addresses shown backwards
- Fix for possible crash when extracting an application's icon
- Mitigation for tray icon not visible after boot
- Add ability to open connections view by middle-clicking on the tray icon
- Update System.Text.Json to close potential vulnerability
- Update Chinese and Polish localizations

---------------------

3.3.1 - Maintenance release (12.03.2023.)
- TinyWall is now open-source
- Add GitHub button to Settings window
- Change license to GPLv3
- Fix Korean localization not loading
- Update Chinese localization

---------------------

3.3.0 - Major update (05.03.2023.)
- Windows 10 and .Net Framework 4.8 are now prerequisites
- Do not require executable to exist when editing firewall exceptions in GUI
- Migrate serialization formats to JSON to avoid runtime code generation
- Migrate native libraries to .Net
- Many memory and performance optimizations
- Annotate for and enable null-state static analysis
- Code restructuring and modernization
- Deprecated code removal

---------------------

3.2.5 - Maintenance release (28.12.2021.)
- Correctly handle change of presence of trailing slashes in registry paths
- Backport many memory improvements from WIP TinyWall 3.3+
- Fix grey icon due to long startup time when apps such as Samsung Magician 7.0 are installed
- Fix merging of blocked UWP app entries in Connections window
- Update Bulgarian localization
- Deprecation notes:
    Windows 7, 8, 8.1, and certain older versions of Windows 10
    will soon not be supported in a future TinyWall release.

---------------------

3.2.3 - Maintenance release (26.10.2021.)
- Fix GUI crash in Connections window if missing file access permissions
